[package]
name = "bindashtree"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/jianshu93/bindashtree"
keywords = ["genome", "minhash", "tree"]
license = "MIT OR Apache-2.0"
description = "MinHash based phylogenomics via neighbor joining"

[dependencies]
clap = "4.3"
needletail = "0.5.1"
rayon = "1.5"
kmerutils = { version = "0.0.11", features = ["simdeez_f"]}
anndists = { version = "0.1.2", features = ["simdeez_f"] }
num = { version = "0.4" }
env_logger = { version = "0.11" }
speedytree = { version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
rand_distr = "0.4"
